@@ -29,17 +29,19 @@ theme=dark
 toolBarShow=true
 menuShow=true
 filesPanelShow=true
+filesPanelPlace=left
 geometry=1024x768
 guiFont={Droid Sans Mono} 9
 guiFontBold={Droid Sans Mono} 9 bold
 guiFG=#cccccc
 \[Editor\]
 autoFormat=true
-font=courier 10 normal roman
-fontBold=courier 10 bold roman
+font=Monospace 10
+fontBold=Monospace 10
 backGround=#333333
 foreground=#cccccc
 selectbg=#10a410a410a4
+selectLightBg=grey
 nbNormal=#000000
 nbModify=#ffff5d705d70
 lineNumberFG=#a9a9a9
