@@ -186,7 +186,10 @@
 ::msgcat::mcset ru "Variables" "Переменные"
 ::msgcat::mcset ru "Version" "Версия"
 ::msgcat::mcset ru "View" "Вид"
-::msgcat::mcset ru "View files tree" "Показывать дерево файлов"
+::msgcat::mcset ru "View panel" "Показывать дополнительную панель"
+::msgcat::mcset ru "Panel side" "Расположение дополнительной панели"
+::msgcat::mcset ru "Left" "Слева"
+::msgcat::mcset ru "Right" "Справа"
 ::msgcat::mcset ru "View line numbers" "Показывать номера строк"
 ::msgcat::mcset ru "Warning" "Внимание"
 ::msgcat::mcset ru "Was replacement" "Было заменено"
